significant refactoring and clean-up (more underway); Kalman is finished as such, however I have to integrate it with the solver; deeper (statistical) test for Kalman validity (needs to and) will be implemented; better memory management for handling big matrices is needed (currently unreliable solution is adopted)

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,25 @@ Amdados_api_codeblocks/
 # Editor Specific
 *.swp
 *~
-.\#*
+build*
+*.res
+*.run
+Observation.txt
+DumpAllScale.txt
+doc
+.settings
+*~
+*.*~
+*\#
+.*.swp
+.*.swo
+tags
+*.zip
+*.gz
+verdandi
+verdandi*
+output
+3rd_party
+3rd-party
+
+
