solver is partially done; significant refactoring, breaking nasty interdependencies, numerous small fixes; many open issues (see todo.txt)

--- a/amdados.conf
+++ b/amdados.conf
@@ -4,4 +4,23 @@ output_dir output       # the output folder
 
 diffusion_coef 0.2      # diffusion coefficient
 
+num_domains_x 10        # number of sub-domains in x-dimension
+num_domains_y 10        # number of sub-domains in y-dimension
+
+num_elems_x 10          # number of elements (or nodal points) in each sub-domain in x-dimension
+num_elems_y 10          # number of elements (or nodal points) in each sub-domain in y-dimension
+
+spot_x 3                # substance spot abscissa in the whole domain
+spot_y 15               # substance spot ordinate in the whole domain
+spot_density 10000      # substance spot concentration at initial time
+
+observation_file     Observation.txt    # name of the file of observations
+observation_interval 1                  # number of timesteps between observation availability
+
+integration_T 200           # number of integration time steps
+
+# Parameters to initialize the model covariance at the beginning.
+model_covar_var 1     # variance of any diagonal element of the model covariance matrix P
+model_covar_Rx  1     # off-diagonal elements of P fade away as
+model_covar_Ry  1     #        exp(-((x_i - x_k)/Rx)^2 - ((y_i - y_k)/Ry)^2)
 
