solver is formally implemented; next, it must be tested

--- a/amdados.conf
+++ b/amdados.conf
@@ -1,6 +1,7 @@
 # Parameters for Amdados application.
 
-output_dir output       # the output folder
+output_dir       output         # the output folder for the main application
+test_output_dir  ../../output   # the output folder for the unit-tests
 
 diffusion_coef 0.2      # diffusion coefficient
 
@@ -17,6 +18,8 @@ spot_density 10000      # substance spot concentration at initial time
 observation_file     Observation.txt    # name of the file of observations
 observation_interval 1                  # number of timesteps between observation availability
 
+time_delta 0.1              # time integration step
+space_delta 100             # space discretization step
 integration_T 200           # number of integration time steps
 
 # Parameters to initialize the model covariance at the beginning.
@@ -24,3 +27,5 @@ model_covar_var 1     # variance of any diagonal element of the model covariance
 model_covar_Rx  1     # off-diagonal elements of P fade away as
 model_covar_Ry  1     #        exp(-((x_i - x_k)/Rx)^2 - ((y_i - y_k)/Ry)^2)
 
+# Visualization, debugging, etc. 
+output_every_nth_time_step 5    # print state every few time-steps, if positive
