--- a/amdados.conf
+++ b/amdados.conf
@@ -3,7 +3,8 @@
 output_dir       output         # the output folder for the main application
 test_output_dir  ../../output   # the output folder for the unit-tests
 
-diffusion_coef 0.2      # diffusion coefficient
+#diffusion_coef 0.2      # diffusion coefficient
+diffusion_coef 3000000.77
 
 num_domains_x 10        # number of sub-domains in x-dimension
 num_domains_y 10        # number of sub-domains in y-dimension
@@ -11,9 +12,12 @@ num_domains_y 10        # number of sub-domains in y-dimension
 num_elems_x 10          # number of elements (or nodal points) in each sub-domain in x-dimension
 num_elems_y 10          # number of elements (or nodal points) in each sub-domain in y-dimension
 
-spot_x 3                # substance spot abscissa in the whole domain
-spot_y 15               # substance spot ordinate in the whole domain
-spot_density 10000      # substance spot concentration at initial time
+domain_size_x 10000     # global domain size in x-dimension [meters]
+domain_size_y 10000     # global domain size in y-dimension [meters]
+
+spot_x 300              # substance spot abscissa in the global domain [meters]
+spot_y 1500             # substance spot ordinate in the global domain [meters]
+spot_density 10000      # substance spot concentration at initial time [units???]
 
 observation_file     Observation.txt    # name of the file of observations
 observation_interval 1                  # number of timesteps between observation availability
@@ -21,6 +25,14 @@ observation_interval 1                  # number of timesteps between observatio
 time_delta 0.1              # time integration step
 space_delta 100             # space discretization step
 integration_T 200           # number of integration time steps
+
+integration_period 1        # integration period 0...T [seconds]
+integration_nsteps 200      # min. number of time steps to be done during integration period
+
+#flow_model_max_vx 0.12      # module of max. flow velicity in x-dimension [meters/seconds]
+#flow_model_max_vy 0.24      # module of max. flow velicity in y-dimension [meters/seconds]
+flow_model_max_vx 10.12      # module of max. flow velicity in x-dimension [meters/seconds]
+flow_model_max_vy 10.24      # module of max. flow velicity in y-dimension [meters/seconds]
 
 # Parameters to initialize the model covariance at the beginning.
 model_covar_var 1     # variance of any diagonal element of the model covariance matrix P
