stage before rolling back to fix small discrepancies in config. file

--- a/amdados_old.conf
+++ b/amdados_old.conf
@@ -3,8 +3,7 @@
 output_dir       output         # the output folder for the main application
 test_output_dir  ../../output   # the output folder for the unit-tests
 
-#diffusion_coef 0.2      # diffusion coefficient
-diffusion_coef 3000000.77
+diffusion_coef 0.2      # diffusion coefficient
 
 num_domains_x 10        # number of sub-domains in x-dimension
 num_domains_y 10        # number of sub-domains in y-dimension
@@ -26,13 +25,11 @@ time_delta 0.1              # time integration step
 space_delta 100             # space discretization step
 integration_T 200           # number of integration time steps
 
-integration_period 20        # integration period 0...T [seconds]
+integration_period 1        # integration period 0...T [seconds]
 integration_nsteps 200      # min. number of time steps to be done during integration period
 
-#flow_model_max_vx 0.12      # module of max. flow velicity in x-dimension [meters/seconds]
-#flow_model_max_vy 0.24      # module of max. flow velicity in y-dimension [meters/seconds]
-flow_model_max_vx 10.12      # module of max. flow velicity in x-dimension [meters/seconds]
-flow_model_max_vy 10.24      # module of max. flow velicity in y-dimension [meters/seconds]
+flow_model_max_vx 0.12      # module of max. flow velicity in x-dimension [meters/seconds]
+flow_model_max_vy 0.24      # module of max. flow velicity in y-dimension [meters/seconds]
 
 # Parameters to initialize the model covariance at the beginning.
 model_covar_var 1     # variance of any diagonal element of the model covariance matrix P
