python prototype progressing, see README

--- a/amdados.conf
+++ b/amdados.conf
@@ -4,7 +4,8 @@ output_dir       output         # the output folder for the main application
 test_output_dir  ../../output   # the output folder for the unit-tests
 
 #diffusion_coef 0.2      # diffusion coefficient
-diffusion_coef 3000000.77
+#diffusion_coef 3000000.77
+diffusion_coef 30.0
 
 num_domains_x 10        # number of sub-domains in x-dimension
 num_domains_y 10        # number of sub-domains in y-dimension
@@ -12,11 +13,11 @@ num_domains_y 10        # number of sub-domains in y-dimension
 num_elems_x 10          # number of elements (or nodal points) in each sub-domain in x-dimension
 num_elems_y 10          # number of elements (or nodal points) in each sub-domain in y-dimension
 
-domain_size_x 10000     # global domain size in x-dimension [meters]
-domain_size_y 10000     # global domain size in y-dimension [meters]
+domain_size_x 1000      # global domain size in x-dimension [meters]
+domain_size_y 1000      # global domain size in y-dimension [meters]
 
-spot_x 300              # substance spot abscissa in the global domain [meters]
-spot_y 1500             # substance spot ordinate in the global domain [meters]
+spot_x 30               # substance spot abscissa in the global domain [meters]
+spot_y 150              # substance spot ordinate in the global domain [meters]
 spot_density 10000      # substance spot concentration at initial time [units???]
 
 observation_file     Observation.txt    # name of the file of observations
@@ -26,7 +27,7 @@ time_delta 0.1              # time integration step
 space_delta 100             # space discretization step
 integration_T 200           # number of integration time steps
 
-integration_period 20        # integration period 0...T [seconds]
+integration_period 200       # integration period 0...T [seconds]
 integration_nsteps 200      # min. number of time steps to be done during integration period
 
 #flow_model_max_vx 0.12      # module of max. flow velicity in x-dimension [meters/seconds]
@@ -41,4 +42,7 @@ model_covar_Ry  1     #        exp(-((x_i - x_k)/Rx)^2 - ((y_i - y_k)/Ry)^2)
 
 # Visualization, debugging, etc.
 output_every_nth_time_step 5    # print state every few time-steps, if positive
+video_enable               1    # enable video if non-zero
+video_frame_rate           24   # frame rate of the AVI file showing the solution
+
 
