Schwarz method implememtation is undeway; new grid test verifies layout thoroughly; many small improvements

--- a/amdados.conf
+++ b/amdados.conf
@@ -2,8 +2,10 @@
 
 version 2           # version of configuration file
 
-output_dir       output         # the output folder for the main application
-test_output_dir  ../../output   # the output folder for the unit-tests
+output_dir          output              # the output folder for the main application
+test_output_dir     ../../output        # the output folder for the unit-tests
+analytic_solution   analytic_sol.txt    # file that contains analytic solution
+simulation_solution simulation_sol.txt  # file that contains simulation solution with data assimilation
 
 diffusion_coef 5.0      # diffusion coefficient
 
@@ -36,11 +38,9 @@ model_noise_R           1.0     # amplitude (here deviation) of measurement nois
 
 schwartz_tol 0.001              # tolerance in the Schwartz method
 
-generate_observations_only 1    # if non-zero, generate observations and quit,
-                                # otherwise proceed to the main part - data assimilation
-
-
-
+generate_video             1    # 0/1 enables generation of video (needs ffmpeg installed)
+generate_text_output       1    # 0/1 enables text output of simulation
+generate_observations_only 1    # 0/1 enables observations only or full data assimilation
 
 # Visualization, debugging, etc.
 #video_enable               1    # enable video if non-zero
