(1) compiler generates a wrong code when two CPP files have defined the macros and constants with same names but different content - I got rid of such a repetition (which was useful for testing); (2) single Amdados2D.cpp file for now with basic Schwarz forward time integration; (3) minor fixes in visualization stuff; (4) wiped out experimental code

--- a/amdados.conf
+++ b/amdados.conf
@@ -4,8 +4,8 @@ version 2           # version of configuration file
 
 output_dir          output              # the output folder for the main application
 test_output_dir     ../../output        # the output folder for the unit-tests
-analytic_solution   analytic_sol.txt    # file that contains analytic solution
-simulation_solution simulation_sol.txt  # file that contains simulation solution with data assimilation
+analytic_solution   analytic_sol.txt    # file for analytic solution
+simulation_solution simulation_sol.txt  # file for simulation solution with data assimilation
 
 diffusion_coef 5.0      # diffusion coefficient
 
