--- a/amdados.conf
+++ b/amdados.conf
@@ -33,8 +33,8 @@ flow_model_max_vy 1.0       # module of max. flow velocity in y-dimension [meter
 
 model_ini_var           1.0     # initial variance (diagonal elements of model covariance matrix P)
 model_ini_covar_radius  1.0     # initial radius of correlation between domain points [meters]
-model_noise_Q           1.0     # amplitude (here deviation) of model noise
-model_noise_R           1.0     # amplitude (here deviation) of measurement noise
+model_noise_Q           1.0     # a reference model noise variance
+model_noise_R           1.0     # a reference measurement noise variance
 
 schwartz_tol 0.001              # tolerance in the Schwartz method
 
