new design with stencil API

--- a/amdados.conf
+++ b/amdados.conf
@@ -1,7 +1,5 @@
 # Parameters for Amdados application.
 
-version 3               # version of configuration file
-
 output_dir output       # the output folder for the main application
 
 diffusion_coef 1.0      # diffusion coefficient
@@ -36,3 +34,5 @@ model_ini_covar_radius  1.0     # initial radius of correlation between \
 
 model_noise_Q    1.0    # model noise variance (a basic, reference value)
 model_noise_R    1.0    # measurement noise variance (a basic, reference value)
+
+write_num_fields 100    # record this number of full fields during simulation
