--- a/amdados.conf
+++ b/amdados.conf
@@ -35,7 +35,7 @@ sensor_per_subdomain 0    # 0 - sensors are placed pseudo-randomly across the
 ### Integration of advection-diffusion model.
 integration_period 3500   # integration period 0...T [seconds]
 integration_nsteps 200    # min. number of integration time steps
-schwarz_num_iters  7      # fixed number of Schwarz iterations on each step
+num_sub_iter       7      # fixed number of sub-iterations on each step
 
 ### Parameters of flow in the domain.
 flow_model_max_vx 1.0   # module of max. flow velocity in x-dimension [m/s]
