--- a/scripts/verify_output.sh.in
+++ b/scripts/verify_output.sh.in
@@ -31,7 +31,7 @@ fi
 
 # run application, capture output to get output file name
 cd @PROJECT_BINARY_DIR@/app
-OUTPUT=$(NUM_WORKERS="$NPROC" /usr/bin/time -v @PROJECT_BINARY_DIR@/app/amdados $ADDITIONAL_ARGUMENTS --scenario benchmark:${CASE} --config @PROJECT_BINARY_DIR@/app/amdados.conf | tee /dev/tty)
+OUTPUT=$(NUM_WORKERS="$NPROC" /usr/bin/time -v @PROJECT_BINARY_DIR@/app/amdados $ADDITIONAL_ARGUMENTS --scenario benchmark:${CASE} --config @PROJECT_BINARY_DIR@/app/amdados.conf)
 # grep for filename in output
 FILENAME=`echo $OUTPUT | grep -o '\(field_Nx[0-9][0-9]*_Ny[0-9][0-9]*_Nt[0-9][0-9]*\.bin\)'`
 
